Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137219

Primitive restart does not work with D3D12

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.6, 6.10.1, 6.11.0 FF
    • 6.9.1
    • Qt RHI
    • None
    • a3214c574 (dev), 970f7f876 (6.10), c072056b6 (tqtc/lts-6.8)

      It seems that indexed rendering of triangle strips with primitive restart does not work with D3D12.

      I wrote a simple test program that demonstrates the problem. It renders 4 quads.
      With OpenGL, Vulkan and D3D11 I get 4 quads as expected (Image1.png).
      But with D3D12 I get a mess (Image2.png).
      All testing was done with Windows 11, Visual Studio 2022, Qt 6.9.1.
      I tested both with an NVIDIA GeForce and an Intel Iris GPU; the results where the same.

      The program can be downloaded from
      https://github.com/jrade/DrawIndexedIssue
      It is a Visual Studio 2022 project.
      Bake the shaders with Resources/BakeShaders.bat.
      Select the RHI backend in Main.cpp.

        1. Image1.png
          18 kB
          Johan Råde
        2. Image2.png
          51 kB
          Johan Råde
        For Gerrit Dashboard: QTBUG-137219
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            jrade Johan Råde
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes