rhi: d3d12: Fix primitive restart

Unlike D3D11, it seems one has to explicitly enable
0xFFFFFFFF as the primitive restart value, as 0
means disabled.

Fixes: QTBUG-137219
Pick-to: 6.9 6.8
Change-Id: I7fbee138ef93bde89af16ab97c8f54e9fd687e9d
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit a3214c5745985a76222681a0c64297f5e1ed311a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>